--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>Selamat Pagi Qubil</title>
+    <title>Selamat Pagi Kesayangan Imam</title>
 </head>
 <body>
     <div class="greetings" style="align-items: center; text-align: center;">
@@ -18,23 +18,18 @@
         <span>O</span>
     </br>
         <span>T</span>
-        <span>H</span>
-        <span>A</span>
-        <span>L</span>
-        <span>I</span>
         <span>A</span>
         <span>S</span>
+        <span>Y</span>
         <span>A</span>
-        <span>L</span>
-        <span>S</span>
+        <span>&nbsp;</span>
         <span>A</span>
-        <span>B</span>
         <span>I</span>
-        <span>L</span>
+        <span>D</span>
         <span>A</span>
     </div>
     <div class="description">
-        <span>Maaf ya cringe anjaiii</span>
+        <span></span>
     </div>
     <div class="button-85" role="button">
         <!-- <button> -->
