--- a/flower.html
+++ b/flower.html
@@ -54,6 +54,14 @@
             </div>
         </div>
         <div class="flower__glass"></div>
+
+        
+      </div>
+      <div class="button-85" role="button">
+        <!-- <button> -->
+            <a href="gretting.html" style="color: white;">KLIK SINI YU TASYA SAYANG</a>
+        <!-- </button> -->
+        
       </div>
     </div>
 
