--- a/flower.html
+++ b/flower.html
@@ -8,10 +8,16 @@
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
     <title>Hii Tasya</title>
 </head>
+
+<div class="button-85" role="button">
+      <a href="gretting.html" style="color: white; text-align: center;">KALAU UDAH LIAT BUNGANYA GUGUR <br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; KLIK SINI YU TASYA SAYANG&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+</div>
 <body class="container">
   <!-- Pembuat code: https://codepen.io/mdusmanansari/pen/BamepLe -->
-    <div class="night">
-      <div class="flower">
+
+  
+  <div class="night">
+    <div class="flower">
         <div class="f-wrapper">
             <div class="flower__line"></div>
             <div class="f">
@@ -55,12 +61,6 @@
         </div>
         <div class="flower__glass"></div>
 
-        
-      </div>
-      <div class="button-85" role="button">
-        <!-- <button> -->
-            <a href="gretting.html" style="color: white;">KLIK SINI YU TASYA SAYANG</a>
-        <!-- </button> -->
         
       </div>
     </div>
